Fixed background color and icon spacing. Add link to Emerson website

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -2,7 +2,7 @@
 
 // Restate Bootstrap Variables
 
-$white: #fff !default;
+$white: #f0f0f0 !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
