--- a/src/assets/sass/bootstrap/bootstrap-reboot.css
+++ b/src/assets/sass/bootstrap/bootstrap-reboot.css
@@ -41,7 +41,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color: #f0f0f0;
 }
 
 [tabindex='-1']:focus {
